# tuicub

./: .gitignore  README.md  noxfile.py  pyproject.toml
src/tuicub/: cli.py  tuicub.py
src/tuicub/app/: __init__.py  controller.py  module.py  state.py  status.py  view.py  viewmodel.py
src/tuicub/common/: cache.py  config.py  logger.py  models.py  module.py  schemas.py  strings.py  transitions.py  utils.py
src/tuicub/game/: __init__.py  consts.py  controller.py  errors.py  keybinds.py  models.py  module.py  state.py  view.py  viewmodel.py
src/tuicub/gameroom/: __init__.py  controller.py  exception.py  keybinds.py  module.py  view.py  viewmodel.py
src/tuicub/gamerooms/: __init__.py  controller.py  keybinds.py  module.py  state.py  view.py  viewmodel.py
src/tuicub/register_user/: __init__.py  controller.py  keybinds.py  module.py  request.py  state.py  view.py
tests/: conftest.py  utils.py
tests/app/: test_app_controller.py  test_app_module.py  test_app_status.py  test_app_view.py  test_app_viewmodel.py
tests/app/actions/: test_remove_confirmation.py  test_set_confirmation.py
tests/common/: test_cache.py  test_common_module.py  test_logger.py  test_models.py  test_transitions.py  test_utils.py
tests/common/confirmation/: test_confirm_interactor.py  test_confirmation.py  test_confirmation_factory.py  test_confirmation_module.py  test_confirmation_service.py
tests/common/events/: test_events_factory.py  test_events_module.py
tests/common/http/: test_auth_middleware.py  test_base_interactor.py  test_base_request.py  test_error_handler.py  test_http_module.py  test_httpx_client.py
tests/common/screens/: test_screens_factory.py  test_tuicub_screen.py
tests/common/services/: test_alert_service.py  test_auth_service.py  test_exit_service.py  test_screen_size_service.py  test_services_module.py
tests/common/state/: test_state_module.py  test_store.py
tests/common/views/: test_base_container.py  test_gameroom_text.py  test_hcenter_view.py  test_list_view.py  test_renderer.py  test_text.py  test_text_animator.py  test_text_view.py  test_textfield.py  test_theme.py  test_vcenter_view.py
tests/game/: conftest.py  test_board_service.py  test_game_controller.py  test_game_keybinds.py  test_game_module.py  test_game_view.py  test_game_viewmodel.py  test_models.py  test_scroll_service.py
tests/gameroom/: test_gameroom_controller.py  test_gameroom_keybinds.py  test_gameroom_module.py  test_gameroom_view.py  test_gameroom_viewmodel.py
tests/gamerooms/: conftest.py  test_gamerooms_controller.py  test_gamerooms_keybinds.py  test_gamerooms_module.py  test_gamerooms_state.py  test_gamerooms_view.py  test_gamerooms_viewmodel.py
tests/register_user/: test_register_user_controller.py  test_register_user_keybinds.py  test_register_user_module.py  test_register_user_request.py  test_register_user_state.py  test_register_user_view.py
(+202 files in other folders)
